# mpu-6050-on-stm32

./: .cproject  .project  CMakeLists.txt  HMC5883L I2C Documentation.md  IMU_GY87_Research_Documentation.md  MPU6050_Read.ioc  README.md  README_ChooseOutput.md  README_Framework_Architecture.md  README_GY87_Library_Usage.md  README_Python_Streaming.md  UART_Display_Functions_Guide.md  debug_instructions.md  debug_streaming.py  debug_uart.py  framework_usage_examples.c  mpu6050_chooseOutput.py  mpu6050_simple.py  mpu6050_streaming.py  package.xml  requirements.txt  simple_plot.py  test_uart.py
Core/Inc/: framework.h  gy87_mpu6050.h  mpu6050.h  stm32f1xx_it.h  usart.h
Core/Src/: framework.c  gy87_mpu6050.c  main.c  mpu6050.c  stm32f1xx_hal_msp.c  usart.c
imu/: CMakeLists.txt  README.md  package.xml
imu/launch/: imu.launch.py
imu/src/: imu_node.cpp
launch/: imu.launch.py
ros2_imu/: CMakeLists.txt  README.md  USAGE_GUIDE.md  package.xml
ros2_imu/config/: imu.rviz
ros2_imu/docs/: connection_diagram.md  sensor_msgs_imu_compliance.md
ros2_imu/imu/: __init__.py  sensor_interface.py
ros2_imu/launch/: gy87_imu.launch.py  gy87_imu_simple.launch.py
ros2_imu/scripts/: demo_imu.py  imu_python_node.py  test_imu_compliance.py  validate_imu_message.py
ros2_imu/src/: imu_node.cpp
ros2_imu/test/: test_imu.cpp
src/: imu_node.cpp
src/src/: imu_node.cpp
