<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu</name>
  <version>1.0.0</version>
  <description>ROS2 package for GY-87 10DOF IMU (MPU6050 + HMC5883L + BMP180)</description>
  
  <maintainer email="developer@example.com">IMU Developer</maintainer>
  <license>MIT</license>
  
  <author email="developer@example.com">IMU Developer</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- ROS2 Dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- Serial Communication -->
  <depend>serial</depend>
  <depend>pyserial</depend>
  
  <!-- Math and Filtering -->
  <depend>eigen3</depend>
  <depend>tf2_eigen</depend>
  
  <!-- Launch and Configuration -->
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>launch_xml</depend>
  <depend>launch_yaml</depend>
  
  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
